# test-byoa-cover-crop-

./: README.md  byoa.toml  pyproject.toml
manifests/: cover_crop.yaml  cover_crop_svc.yaml
notebooks/: cover_crop.ipynb
src/: main.py
src/api/: api.py
src/cover_crop/: processor.py
